Fixed spacing of margins and borders and added import google fonts

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,39 @@
 /* styles */
+/*Font imported*/
+/*NUNITO*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
-* {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+/* Dancing script */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+
+.nunito {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400px;
+    font-style: normal;
 
 }
+
+.dancing-script {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400px;
+    font-style: normal;
+    font-size:
+}
+
 
 html { 
     box-sizing: border-box;
 }
+*,*:before, *:after{
+    box-sizing: inherit;
+}
 
+
+
+/* ---------SECTION 1--------- */
+/*Project Odin Recipes*/
 .heading {
     text-align: center;
     color: black;
@@ -16,40 +41,84 @@ html {
         linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
         linear-gradient(127deg, rgba(32, 178, 240, 0.8), rgba(0,255,0,0) 70.71%),
         linear-gradient(336deg, rgba(97, 217, 121, 0.8), rgba(0,0,255,0) 70.71%);
+    width: auto;
+    height: auto;
+    padding: 1px;
+
 }
 
+/*Cooking with Doktora Kara - tales of her Filipino palette*/
+.heading .subtitle {
+   
+}
+
+/*Icon of RECIPE*/
 .recipe-icon {
-    margin: 10px;
+    margin: 5px;
 }
 
+/* ---------SECTION 2--------- */
+/*MENU*/ 
+/*Main Dishes and Desserts*/
 nav .subtitle {
     background-color: rgb(225,228,196);
-    border: 5px outset dodgerblue;
+    border: 5px outset rgb(36, 192, 137);
     display: inline-block;
+    padding: 5px 15px;
+    margin: auto;
 }
 
-/* when mouse-over, button turns pink */
+/*Navigation area*/
+nav {
+    width: 400x;
+    margin: auto;
+    padding: 1em;
+    border: 5px outset rgb red;
+    background-color: beige;
+
+}
+/* RECIPE BUTTONS when mouse-over, button turns pink*/
 button:hover {
     background-color: pink;
     transition: 0.7s;
     }
 
-footer {
-    text-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(127,225,192);
-    margin-top: 100px;
-    padding: 50px 50px 50px 50px;
-    border: 10px outset aquamarine;
-}
 
 .recipe {
-    margin: 5px;
+    margin: auto;
+    display: inline-block;
+    border-left: 5px solid rgb(127,225,192);
 }
 
+.inquiries {
+    text-align: center;
+    line-height: 20px;
+    height: 20px;
+}
+
+span {
+    font-weight:700;
+    color: red;
+    font-style: italic;
+}
+/*Encompassing all contents except footer*/
 body {
     background-color: bisque;
+    border: 5px inset aquamarine;
+    padding-bottom: 45px;
+
+    
+}
+
+/*Footer at the bottom*/
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    background-color: rgb(127,225,192);
+    margin-top: 80px;
+    padding: 50px 50px 50px 50px;
+    border: 10px outset aquamarine;
 }
